--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>flashsale-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
